--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-1-htmll-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-1-htmll-css-estruturas-de-pagina/index.html
@@ -5,11 +5,10 @@
 		<title>Aprendendo HTML</title>
 	</head>
 	<body>
-		<h1 text-align: center>Exercícios</h1>
+		<h1 style="text-align: center;">Exercícios</h1>
 		<ul>
-			Pessoas que conheci na
-			<strong>Trybe</strong
-			><br />
+			<h2>Pessoas que conheci na <strong style="color: green;">Trybe</strong>:</h2>
+			<br />
 			<li><a href="#lauro">Lauro</a></li>
 			<li><a href="#aélida">Aélida</a></li>
 			<li><a href="#elias">Elias</a></li>
@@ -18,11 +17,12 @@
 			<li><a href="#adrianorib"> AdrianoRibeiro </a></li>
 			<li><a href="#marcossouza">Marcos Souza</a></li>
 		</ul>
-		<div>
+		
 			<p>
 				Não sabe o que tá procurando? Clique
 				<a href="https://google.com.br" target="_blank">aqui</a>
-			</p>
+			<div style="padding: 50px;">
+            </p>
 			<p id="lauro">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
 				eligendi voluptatem nobis repudiandae labore, suscipit, facilis
