--- a/fundamentos/bloco-3-introducao-a-html-e-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/index.html
@@ -4,12 +4,31 @@
 		<meta charset="UTF-8" />
 		<title>HTML</title>
 		<style>
+			body {
+				font-size: 16px;
+			}
+			p {
+				font-weight: 3em;
+			}
 			h1 {
 				font-size: 65px;
 				color: orange;
+				font-family: sans-serif;
+				font-style: italic;
+				line-height: 5px;
+				text-decoration: underline;
 			}
 			.stylo {
 				background-color: aquamarine;
+			}
+			#amarelo {
+				background-color: yellow;
+			}
+			#vermelho {
+				background-color: red;
+			}
+			#marrom {
+				background-color: brown;
 			}
 		</style>
 	</head>
@@ -17,9 +36,9 @@
 		<h1>Exercícios 3.2</h1>
 		<p class="stylo">Qual é a sua cor favorita?</p>
 		<ul class="stylo">
-			<li>Amarelo</li>
-			<li>Vermelho</li>
-			<li>Marrom</li>
+			<li id="amarelo">Amarelo</li>
+			<li id="vermelho">Vermelho</li>
+			<li id="marrom">Marrom</li>
 		</ul>
 	</body>
 </html>
