adicão do css externo

--- a/fundamentos/bloco-3-introducao-a-html-e-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/index.html
@@ -3,34 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>HTML</title>
-		<style>
-			body {
-				font-size: 16px;
-			}
-			p {
-				font-weight: 3em;
-			}
-			h1 {
-				font-size: 65px;
-				color: orange;
-				font-family: sans-serif;
-				font-style: italic;
-				line-height: 5px;
-				text-decoration: underline;
-			}
-			.stylo {
-				background-color: aquamarine;
-			}
-			#amarelo {
-				background-color: yellow;
-			}
-			#vermelho {
-				background-color: red;
-			}
-			#marrom {
-				background-color: brown;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<style></style>
 	</head>
 	<body>
 		<h1>Exercícios 3.2</h1>
@@ -42,3 +16,4 @@
 		</ul>
 	</body>
 </html>
+-
