--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -3,72 +3,114 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta lang="pt-Br" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=PT+Sans&family=Quicksand:wght@300&family=Ubuntu&display=swap"
+			rel="stylesheet"
+		/>
+
 		<title>Stomatopoda</title>
-    <link rel="stylesheet" href="style.css">
-		<header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></header>
+		<link rel="stylesheet" href="style.css" />
+		<header>
+			<h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+		</header>
 		<nav class="navigation">
 			<ul>
-				<li><a href="">Página Inicial</a></li>
-				<li><a href="#secao-sobre">Sobre</a></li>
-				<li><a href="#secao-contato">Contato</a></li>
+				<li class="navigation-list"><a href="">Página Inicial</a></li>
+				<li class="navigation-list"><a href="#secao-sobre">Sobre</a></li>
+				<li class="navigation-list">
+					<a href="#secao-contato">Contato</a>
+				</li>
 			</ul>
 		</nav>
 	</head>
+
 	<body>
 		<!--insira os elementos aqui-->
 		<main>
-			<article>
-				<h2>Fatos sobre o Stomatopoda</h2>
-				<section class="caracteristicas">
-					<h3>Caracteristicas:</h3>
-<table>
-  <tr>
-    <th>Nome ciêntifico</th>
-    <th>Reino</th>
-    <th>Filo</th>
-    <th>Subfilo</th>
-    <th>Classe</th>
-    <th>Subclasse</th>
-    <th>Ordem</th>
-  </tr>
-  <tr>
-    <td>Odontodactylus scyllarus</td>
-    <td>Animalia</td>
-    <td>Arthropoda</td>
-    <td>Crustacea</td>
-    <td>Malacostraca</td>
-    <td>Hoplocarida</td>
-    <td>Stomatopoda</td>
-  </tr>
-</table>
-          <section>
-            <h2>Fato 2</h2>
-             <img class="imagem-dos-artigos" src="" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, nemo maiores magni labore quibusdam numquam eaque sint quia ipsa! Qui perferendis delectus perspiciatis error inventore dolores? Laudantium ratione repellendus nisi.</p>
-          </section>
-        <section>
-          <h2>Fato 3</h2>
-            <img class="imagem-dos-artigos" src="" alt="">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi numquam rem veniam et, repudiandae cum magni natus tempora aspernatur eos atque ut, eveniet ipsa corporis, debitis voluptates praesentium voluptate dicta.</p>
-        </section>
-        <section><h2>
-          Fato 3
-        </h2>
-          <img class="imagem-dos-artigos" src="" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor blanditiis suscipit sed cumque molestias repellat laudantium tenetur consequuntur perspiciatis quasi id voluptates expedita voluptatem, excepturi pariatur dignissimos veritatis commodi doloribus!</p></section>
+			<article class="article-background">
+				<article class="child-article">
+					<h2>Fatos sobre o <em>Stomatopoda</em></h2>
+					<h2>Fato 1: Algumas informações importantes</h2>
+					<div class="tabela">
+						<table>
+							<tr>
+								<th>Nome ciêntifico</th>
+								<th>Reino</th>
+								<th>Filo</th>
+								<th>Subfilo</th>
+								<th>Classe</th>
+								<th>Subclasse</th>
+								<th>Ordem</th>
+							</tr>
+							<tr>
+								<td>Odontodactylus scyllarus</td>
+								<td>Animalia</td>
+								<td>Arthropoda</td>
+								<td>Crustacea</td>
+								<td>Malacostraca</td>
+								<td>Hoplocarida</td>
+								<td>Stomatopoda</td>
+							</tr>
+						</table>
+					</div>
+				</article>
+				<article class="child-article">
+					<h2>Fato 2</h2>
+					<img class="imagem-dos-artigos" src="" alt="" />
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+						Vitae, nemo maiores magni labore quibusdam numquam eaque sint
+						quia ipsa! Qui perferendis delectus perspiciatis error
+						inventore dolores? Laudantium ratione repellendus nisi.
+					</p>
+				</article>
+				<article class="child-article">
+					<h2>Fato 3</h2>
+					<img class="imagem-dos-artigos" src="" alt="" />
+					<p>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi
+						numquam rem veniam et, repudiandae cum magni natus tempora
+						aspernatur eos atque ut, eveniet ipsa corporis, debitis
+						voluptates praesentium voluptate dicta.
+					</p>
+				</article>
+				<article class="child-article">
+					<h2>Fato 3</h2>
+					<img class="imagem-dos-artigos" src="" alt="" />
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+						blanditiis suscipit sed cumque molestias repellat laudantium
+						tenetur consequuntur perspiciatis quasi id voluptates expedita
+						voluptatem, excepturi pariatur dignissimos veritatis commodi
+						doloribus!
+					</p>
+				</article>
 			</article>
-      <section>
-        <h2>Referências Bibliográficas:</h2>
-      <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-      </ul>
-    </section>
-    <aside>
-      <p>Veja o Stomatopoda em ação:</p>
-<iframe width="640" height="360" src="https://www.youtube.com/embed/E0Li1k5hGBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </aside>
+			<aside>
+				<p>Veja o Stomatopoda em ação:</p>
+				<iframe
+					width="240"
+					height="180"
+					src="https://www.youtube.com/embed/E0Li1k5hGBE"
+					title="YouTube video player"
+					frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen
+				></iframe>
+			</aside>
 		</main>
+		<section class="last-sec">
+			<h2>Referências Bibliográficas:</h2>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+		</section>
 
 		<footer>
 			Conteúdo compilado por <span class="span-footer">Jarbas Gouveia</span>,
