--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -32,31 +32,51 @@
 		<!--insira os elementos aqui-->
 		<main>
 			<article class="article-background">
-				<article class="child-article">
-					<h2>Fatos sobre o <em>Stomatopoda</em></h2>
-					<h2>Fato 1: Algumas informações importantes</h2>
+
+					<h2 class="main-article-title">Fatos sobre o <em>Stomatopoda</em></h2>
+					<article class="child-article">
+					<h2>Fato 1:</h2>
 					<div class="tabela">
-						<table>
+					<table>
 							<tr>
-								<th>Nome ciêntifico</th>
-								<th>Reino</th>
-								<th>Filo</th>
-								<th>Subfilo</th>
-								<th>Classe</th>
-								<th>Subclasse</th>
-								<th>Ordem</th>
-							</tr>
+								<div class="table-title-wrapper">
+								<p>Algumas informações importantes</p>
+							</div>
+						</tr>
 							<tr>
+								<td>Nome ciêntifico</td>
 								<td>Odontodactylus scyllarus</td>
-								<td>Animalia</td>
-								<td>Arthropoda</td>
-								<td>Crustacea</td>
-								<td>Malacostraca</td>
-								<td>Hoplocarida</td>
-								<td>Stomatopoda</td>
+								</tr>
+							<tr>
+									<td>Reino</td>
+									<td>Animalia</td>
+								</tr>
+							<tr>
+									<td>Filo</td>
+									<td>Arthropoda</td>
+								</tr>
+							<tr>
+									<td>Subfilo</td>
+									<td>Crustacea</td>
+								</tr>
+								
+							<tr>
+									<td>Classe</td>
+									<td>Malacostraca</td>
+								</tr>
+							<tr>
+									<td>Subclasse</td>
+									<td>Hoplocarida</td>
+								</tr>
+							<tr>
+									<td>Ordem</td>
+									<td>Stomatopoda</td>
+								</tr>
 							</tr>
+
 						</table>
 					</div>
+					<br>
 				</article>
 				<article class="child-article">
 					<h2>Fato 2</h2>
